# Cryptography_DS

./: .gitignore  README.md
Implementations/Diffie_Hellman_and_MTMA/: mtma_test.py
Implementations/PRNG/: gen.py
Implementations/Pollard's Rho/: main.py
Implementations/Pollard's p-1 Algorithm/: main.py
Implementations/Public_Key/Diffie_Hellman_and_MTMA/: keygen.py  main.py  mtma_test.py
Implementations/SHA-1/: collision_attempt_2.py  main.py
Implementations/Yao_Comparison/: main.py
Implementations/probabilistic_polynomial_time_algorithm/: factor_oracle.py
Implementations/yao_comparison/: main.py
misc/scientia_potentia_est/: baconian_brute.py
personal_cryptosystems/encrypted_schulze/: client_side.py  main.py  private_key  rsa_utils.py
personal_cryptosystems/encrypted_schulze/files/: private_key.pem  public_key.pem
personal_cryptosystems/random_seed_cryptography/: main.py  notes  person_a.py  person_b.py
personal_cryptosystems/random_seed_cryptography/data/: person_a_seed  person_b_seed
personal_cryptosystems/rust_schulze/: .gitignore  Cargo.toml  example_vote_submission.py
personal_cryptosystems/rust_schulze/data/: attendance_hashes  private_key.der  public_key.der
personal_cryptosystems/rust_schulze/src/: attendance.rs  main.rs  rsa_utils.rs  schulze.rs  server.rs
